fix canvas not responsive issue

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -73,7 +73,7 @@
 @media (max-width: 454px) {
 
   :local .header {
-    font-size: 30px;
+    font-size: 24px;
   }
   :local .container {
     margin: 0 12px 24px;
