--- a/src/components/Pages/Pages.css
+++ b/src/components/Pages/Pages.css
@@ -17,8 +17,9 @@
   width: calc(100% - 24px);
 }
 
-@media (max-width: 454px) {
+/*@media (max-width: 454px) {
   :local .container {
     max-width: 263px;
   }
 }
+*/
